<resources>
    <string name="app_name">Kikoba</string>
    <string name="name_edt">Name</string>
    <string name="date_hint">Date</string>
    <string name="amount_hint">Amount</string>
    <string name="save_menu">save</string>
    <string name="insert_menu">Insert</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>

    <string-array name="amount_array">
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile_menu">My Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email Address</string>
    <string name="login_tv">SignUp</string>
    <string name="signUp_tv">SignUp</string>
    <string name="login_btn_">Login</string>
    <string name="or_signup">Or SignUp</string>


    <!--Shared Preference Keys -->
    <string name="preference_fact_type_key">fact_type_pref</string>
    <string name="sign_up">SignUp</string>

</resources>