<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".setup.data.signup.SignUpActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signup_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/signUp_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="28sp">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signup_txt"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:textStyle="bold">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/name_layout"
            tools:layout_editor_absoluteX="39dp">

<!--            <ImageView-->
<!--                android:id="@+id/email_icon"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:srcCompat="@drawable/ic_baseline_email_24">-->

<!--            </ImageView>-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:layout_marginTop="8dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textStyle="bold">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_layout"
            android:padding="8dp"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textStyle="bold">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp"
            android:text="@string/login_btn_" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_layout"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#6960EC"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up"
            android:textColor="@color/black" />



<!--        <ImageView-->
<!--            android:id="@+id/padlock_icon"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="30dp"-->
<!--            android:layout_marginTop="370dp"-->
<!--            app:layout_constraintTop_toTopOf="@id/top"-->
<!--            app:srcCompat="@drawable/ic_baseline_lock_24">-->

<!--        </ImageView-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>