<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.EditActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/member_name_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_input_layout"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_pic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:inputType="textPersonName"
                android:hint="@string/name_edt">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_input_layout"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/member_name_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_contribution"
                android:textStyle="bold"
                android:hint="@string/amount_hint"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_input_layout"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contribution">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:hint="@string/date_hint"
                android:textStyle="bold"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    app:cornerRadius="10dp"
                    android:text="Update"
                    android:textStyle="bold"
                    android:clickable="true"
                    app:layout_constraintTop_toBottomOf="@id/day"
                    app:layout_constraintStart_toEndOf="@+id/btn_delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:focusable="true">
                </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            app:cornerRadius="10dp"
            android:text="Delete"
            android:textStyle="bold"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/day"
            app:layout_constraintStart_toStartOf="parent"
            android:focusable="true">
        </com.google.android.material.button.MaterialButton>

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/ic_launcher"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>